# irods_filesystem_event_processor

./: .gitignore  test_irods_tools_filesystem_event_processor.py  test_irods_tools_filesystem_event_processor_beegfs.py  test_irods_tools_filesystem_event_processor_lustre.py
beegfs_event_listener/: CMakeLists.txt
beegfs_event_listener/src/: beegfs_event_listener_config.json  config.cpp  config.hpp  main.cpp
common/: .irods_filesystem_event_processor_errors.hpp.swp  .serialized_filesystem_event.hpp.swp  change_table_avro_schema.json  file_system_event_avro_schema.json  irods_filesystem_event_processor_errors.hpp  logging.hpp  serialized_filesystem_event.hpp
filesystem_event_aggregator/: CMakeLists.txt
filesystem_event_aggregator/src/: change_table.cpp  change_table.hpp  config.cpp  config.hpp  filesystem_event_aggregator_config.json  irods_ops.cpp  irods_ops.hpp  logging.hpp  main.cpp
irods_beegfs_plugin/src/: irods_beegfs_operations.cpp
irods_filesystem_event_plugin/: CMakeLists.txt  api_plugin.cmake
irods_filesystem_event_plugin/src/: database_routines.hpp  iapi_example.cpp  inout_structs.h  irods_event_operations.cpp  irods_event_operations.hpp  libirods-filesystem-event-api.cpp
lustre_event_listener/: CMakeLists.txt
lustre_event_listener/src/: config.cpp  config.hpp  llapi_cpp_wrapper.c  llapi_cpp_wrapper.h  lustre_event_listener_config.json  main.cpp  main.hpp
